; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/pandora/extr_plat.c_gamma_set.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/pandora/extr_plat.c_gamma_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"%s/op_gamma.sh -b %d %.2f\00", align 1
@pnd_script_base = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @gamma_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gamma_set(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [128 x i8], align 16
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %7 = load i8*, i8** @pnd_script_base, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = sitofp i32 %9 to float
  %11 = fdiv float %10, 1.000000e+02
  %12 = call i32 @snprintf(i8* %6, i32 128, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %7, i32 %8, float %11)
  %13 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %14 = call i32 @do_system(i8* %13)
  ret i32 %14
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i32, float) #1

declare dso_local i32 @do_system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
